created options, attempts at event handler

--- a/popup.css
+++ b/popup.css
@@ -1,7 +1,8 @@
 .name, .name-replace {
-  height: 34px;
-  border-radius: 10px;
+  height: 26px;
+  border-radius: 26px;
   font-size: 15px;
+  padding-left: 10px;
 }
 
 .input-container {
@@ -13,8 +14,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 55px;
+  height: 26px;
 }
 
 /* Hide default HTML checkbox */
@@ -40,8 +41,8 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 18px;
+  width: 18px;
   left: 4px;
   bottom: 4px;
   background-color: white;
