--- a/popup.css
+++ b/popup.css
@@ -11,17 +11,19 @@
 
 /* The switch - the box around the slider */
 
-.submit {
+.switch {
   position: relative;
   display: inline-block;
-  width: 55px;
-  height: 26px;
+  width: 60px;
+  height: 34px;
 }
 
 /* Hide default HTML checkbox */
 
-.submit input {
-  display: none;
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 /* The slider */
@@ -41,8 +43,8 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 18px;
-  width: 18px;
+  height: 26px;
+  width: 26px;
   left: 4px;
   bottom: 4px;
   background-color: white;
