--- a/popup.css
+++ b/popup.css
@@ -9,13 +9,22 @@
   display: flex;
 }
 
+.close {
+  position: absolute;
+  display: inline-block;
+  border-radius: 30px;
+  height: 25px;
+  margin-left: 45px;
+}
+
 /* The switch - the box around the slider */
 
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  margin-top: 4px;
+  width: 50px;
+  height: 25px;
 }
 
 /* Hide default HTML checkbox */
@@ -43,9 +52,9 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
+  height: 18px;
+  width: 18px;
+  left: 2px;
   bottom: 4px;
   background-color: white;
   -webkit-transition: .4s;
@@ -69,7 +78,7 @@ input:checked+.slider:before {
 /* Rounded sliders */
 
 .slider.round {
-  border-radius: 34px;
+  border-radius: 25px;
 }
 
 .slider.round:before {
